web-app/client/assets/css/new/main.css
/* ... */
.btn-group > .btn:last-child {
    border-radius: 0;
    border-bottom-left-radius: 2px;
    border-top-left-radius: 2px;
}

/*
 * Rules
 */
#wrapper {
    min-width: 800px;
    padding: 12px 20px;
    margin: 0 auto 16px;
    max-width: 1240px;
    background-color: #FFF;
    border-radius: 3px;
    box-shadow: rgba(0, 0, 0, 0.2) 0 1px 3px 0;
}

#footer {
    text-align: center;
    color: #99a2a3;
    font-size: 11px;
    padding: 32px 0 32px;
    text-shadow: 0 1px #fff;
    text-transform: uppercase;
    line-height: 20px;
}

#footer a {
    color: #99a2a3;
    text-decoration: underline;
}

#navi {
    width: 156px;
    float: left;
}

#interstitial {
    position: absolute;
    top: 0;
    left: 0;
    background-color: #F0F1F1;
    width: 100%;
    text-align: center;
    margin-top: 37px;
    padding-top: 100px;
    display: none;
}

#interstitial * {
    padding-top: 24px;
}

.product {
    font-size: 14px;
    text-align: right;
    width: 200px;
    color: #9baeca;
    margin: 13px 12px 0 0;
    background-position: top right;
}

.product.developer {
    background-image: url(../../img/developer-product-header.png);
}

.product.cloud {
    background-image: url(../../img/cloud-product-header.png);
}

.widget {
    border-radius: 5px;
    background-color: #fafafa;
    margin-bottom: 16px;
    padding-top: 6px;
}

.widget-header {
    font-size: 18px;
    margin: 0 6px;
    padding: 6px;
    border-radius: 3px;
    border: 1px solid #dfdfdf;
    background-color: #eee;
    font-weight: 200;
    color: #333;
}

.widget-header span {
    color: #999;
}

.widget-header i {
    vertical-align: bottom;
}

.widget-body {
    padding: 8px 12px 8px;
    font-size: 11px;
}

.widget-body-empty {
    padding: 16px;
    text-align: center;
}

.widget-body-empty.widget-chart {
    padding: 8px;
}

.widget-item {
    margin-bottom: 3px;
}

.widget-chart {
    border: 1px solid #ddd;
    background-color: #fff;
    margin: 6px 0 12px;
}

.flow-state {
    float: right;
    padding-top: 28px;
    padding-right: 16px;
    text-align: right;
}

.flow-state strong, .flow-schedule strong {
    color: #5A5D6E;
    font-size: 30px;
    font-weight: 500;
    line-height: normal;
    text-shadow: 0 1px 0 white;
}

.flow-state span {
    font-size: 11px;
    color: #77878B;
    font-weight: bold;
}

.flow-schedule {
    padding: 6px 5px 8px;
}

#flowviz {
    margin: 0 auto;
    position: relative;
    padding: 36px 0;
    clear: left;
}

.flowviz-fade {
    opacity: 0.15;
}

#flowviz-container {
    margin-bottom: 12px;
    overflow: auto;
    overflow-y: hidden;
    padding: 16px 0 16px 16px;
}

#flowviz path {
    stroke-dasharray: 8px, 8px;
    stroke: #5A5D6E;
    stroke-width: 2px;
}

.popup-modal h2 {
    color: #5A5D6E;
    text-align: left;
    font-size: 20px;
    margin-bottom: 16px;
    font-weight: bold;
    letter-spacing: normal;
}

.popup-modal {
    position: absolute;
    top: 160px;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 50;
}

.popup-modal .popup-title {
    text-transform: uppercase;
}

.popup-full {
    top: 200px;
    left: 224px;
}

.popup-container {
    width: 706px;
    margin: 24px auto 0;
    background-color: #fff;
    box-shadow: 0 2px 16px rgba(0,0,0,0.33);
}

.popup-description {
    color: #5c6e71;
    font-size: 14px;
    padding: 16px 0 0;
    line-height: 1.3em;
}

.popup-description a {
    border-bottom: 1px solid #e7eeef;
    text-decoration: none;
}

.popup-body {
    padding: 38px;
}

.popup-body > p > a {
    text-decoration: underline;
    color: #005580;
}

.popup-body > p {
    margin-bottom: 16px;
    font-size: 0.8em;
}

.popup-body > h3 {
    color: #5c5c5c;
    font-weight: bold;
    font-size: 0.8em;
}

.popup-body > ol {
    font-size: 0.8em;
    margin-bottom: 16px;
}

.popup-close {
    float: right;
    cursor: pointer;
    font-size: 24px;
    line-height: 27px;
    width: 26px;
    height: 26px;
    text-align: center;
    margin: -52px -51px 0 0;
    background-color: #8b9395;
    border-radius: 100%;
    color: white;
    box-shadow: 1px 1px 4px rgba(0, 0, 0, .35);
}

.popup-icon, .popup-icon-stream, .popup-icon-cloud {
    float: left;
    width: 32px;
    height: 32px;
    background-repeat: no-repeat;
    margin: 4px 10px 0 12px;
}

.popup-icon, .popup-icon-cloud {
    background-image: url(../../img/flow-controls.png);
    background-position: 0 -113px;
}

.popup-stream-table {
    border-top: 1px solid #eaeaea;
}

.popup-icon-stream {
    background-image: url(../../img/streamer-icon-blue.png);
}

 .popup-icon-cloud {
    background-position: 0 -65px;
 }

.popup-title {
    line-height: 36px;
    padding: 2px 0 16px 10px;
    height: 50px;
}

.popup-title span {
    color: #AAA;
    font-weight: 100;
}

.popup-white-label {
    border-top: 0;
    font-size: 12px;
    color: #77878B;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    padding: 2px;
}

.popup-inject-wrapper {
    padding: 10px 0;
    border-top: 1px solid #ddd;
    margin-top: 10px;
}

#nux-modal, #nux-completed-modal {
    top: 50px;
    display: none;
}

#nux-modal > .popup-container, #nux-completed-modal > .popup-container {
    width: 500px;
}

/*
 * Overriding Bootstrap
 */
.popover-title {
    font-size: 0.8em;
    font-weight: bold;
    color: #333;
}

.popover-content {
    font-size: 0.8em;
    color: #333;
    padding: 14px;
    line-height: 1.3em;
}

.popover-dismiss {
    float: right;
    text-decoration: none;
    color: #aaa !important;
    font-weight: normal;
    cursor: pointer;
}

#flow-injector-input {
    width: 616px;
    max-width: 616px;
    height: 100px;
}

#query-injector-input {
    width: 100%;
    height: 150px;
    background: #575F74;
    color: white;
    margin-top: 10px;
    margin-bottom: 5px;
    font-family: inherit;
    padding: 10px;
    box-sizing: border-box;
}

#execute-explore-query {
    margin: 10px;
    float: right;
}

.bordered-dataset-table {
}

.bordered-dataset-table > td {
    padding: 0;
}
/* ... */

